--- a/composer.json
+++ b/composer.json
@@ -32,7 +32,8 @@
     },
     "require-dev": {
         "sensio/generator-bundle": "^3.0",
-        "symfony/phpunit-bridge": "^3.0"
+        "symfony/phpunit-bridge": "^3.0",
+        "phpbench/phpbench": "0.13.0"
     },
     "scripts": {
         "symfony-scripts": [
