--- a/docker/php-cli/Dockerfile
+++ b/docker/php-cli/Dockerfile
@@ -7,7 +7,7 @@ MAINTAINER Michał Kocztorz <kocztorz@gmail.com>
 #RUN  apt-get update && apt-get install -y \
 #        php7.0-mysql
 
-RUN docker-php-ext-install pdo pdo_mysql`
+RUN docker-php-ext-install pdo pdo_mysql
 #ADD symfony.ini /etc/php5/fpm/conf.d/
 
 # ADD symfony.ini /etc/php5/cli/conf.d/
