--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -29,7 +29,7 @@ services:
             - benchmark_doctrine_mysql
 
     benchmark_doctrine_mysql:
-        image: mysql:5.7.17
+        build: ./docker/mysql
         ports:
             - "13306:3306"
         environment:
